templates/strimzi-drain-cleaner_template.yaml
---
# Source: strimzi-drain-cleaner/templates/000-Namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: strimzi-drain-cleaner
  labels:
    helm.sh/chart: strimzi-drain-cleaner-1.1.0
    app: strimzi-drain-cleaner
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: strimzi-drain-cleaner
    app.kubernetes.io/instance: release-name
---
# Source: strimzi-drain-cleaner/templates/050-Service.yaml
kind: Service
apiVersion: v1
metadata:
  name: strimzi-drain-cleaner
  labels:
    helm.sh/chart: strimzi-drain-cleaner-1.1.0
    app: strimzi-drain-cleaner
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: strimzi-drain-cleaner
    app.kubernetes.io/instance: release-name
  namespace: strimzi-drain-cleaner
spec:
  ports:
    - port: 80
      name: http
      protocol: TCP
      targetPort: 8080
    - port: 443
      name: https
      protocol: TCP
      targetPort: 8443
  selector:
    app: strimzi-drain-cleaner
---
# Source: strimzi-drain-cleaner/templates/060-Deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: strimzi-drain-cleaner
  labels:
    helm.sh/chart: strimzi-drain-cleaner-1.1.0
    app: strimzi-drain-cleaner
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: strimzi-drain-cleaner
    app.kubernetes.io/instance: release-name
  namespace: strimzi-drain-cleaner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: strimzi-drain-cleaner
  template:
    metadata:
      labels:
        app: strimzi-drain-cleaner
    spec:
      serviceAccountName: release-name-strimzi-drain-cleaner
      containers:
        - name: strimzi-drain-cleaner
          image: quay.io/strimzi/drain-cleaner:1.1.0
          ports:
            - containerPort: 8080
              name: http
            - containerPort: 8443
              name: https
          args:
            - /opt/strimzi/bin/drain_cleaner_run.sh
          volumeMounts:
            - name: webhook-certificates
              mountPath: "/etc/webhook-certificates"
              readOnly: true
            - name: tmp-dir
              mountPath: "/tmp"
          livenessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
          readinessProbe:
            httpGet:
              path: /health
              port: http
            initialDelaySeconds: 10
            periodSeconds: 30
      volumes:
        - name: webhook-certificates
          secret:
            secretName: strimzi-drain-cleaner
        - name: tmp-dir
          emptyDir: {}
  strategy:
    type: RollingUpdate
---
# Source: strimzi-drain-cleaner/templates/070-ValidatingWebhookConfiguration.yaml
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  name: strimzi-drain-cleaner
  labels:
    helm.sh/chart: strimzi-drain-cleaner-1.1.0
    app: strimzi-drain-cleaner
    app.kubernetes.io/version: "1.1.0"
    app.kubernetes.io/managed-by: Helm
    app.kubernetes.io/name: strimzi-drain-cleaner
    app.kubernetes.io/instance: release-name
  annotations:
    cert-manager.io/inject-ca-from: strimzi-drain-cleaner/strimzi-drain-cleaner
webhooks:
  - name: strimzi-drain-cleaner.strimzi.io
    rules:
      - apiGroups:   [""]
        apiVersions: ["v1"]
        operations:  ["CREATE"]
        resources:   ["pods/eviction"]
        scope:       "Namespaced"
    clientConfig:
      service:
        namespace: "strimzi-drain-cleaner"
        name: "strimzi-drain-cleaner"
        path: /drainer
        port: 443
      caBundle: Cg==
    admissionReviewVersions: ["v1"]
    sideEffects: None
    failurePolicy: Ignore
    timeoutSeconds: 5
